# open-ctf-env

./: .gitignore  LICENSE  README.md  env.example  pyproject.toml
data/: train_augmented.jsonl
scripts/: run_agent.py  validate_xbow.py
scripts/data/: augment_xbow.py  convert_to_sharegpt.py
scripts/train/: README.md  instruction.md  train_config.yaml  train_glm4_agent.py  train_green_agent.py
src/envs/open_ctf/: Dockerfile  __init__.py  app.py  client.py  docker_manager.py  env.py  environment.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
src/utils/: __init__.py  energy_monitor.py  scoring.py
