[project]
name = "open-ctf-env"
version = "0.1.0"
description = "Cybersecurity Reinforcement Learning Environment for OpenEnv"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Open CTF Team", email = "openctf@example.com"},
]

dependencies = [
    "gymnasium",
    "openenv-core",
    "trl",
    "peft",
    "accelerate",
    "bitsandbytes",
    "codecarbon",
    "docker",
    "zmq>=0.0.0",
    "numpy<2.3",
]

[project.optional-dependencies]
train = [
    "unsloth",
    "xformers",
]
agent = [
    "litellm",
]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest",
]
